fixed a few styles on mobile view and header

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,13 +1,15 @@
 // app global css in SCSS form
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  ::-webkit-scrollbar {
+    display: none;
   }
-  #q-app {
-    display: flex;
-    height: 100vh;
-    width: 100%;
+}
+#q-app {
+  display: flex;
+  height: 100vh;
+  width: 100%;
   
-    
-  }
+}
